Stretch goals, screenshots, and minor fixes

--- a/themes/inhabitent-project-4/sass/_fonts.scss
+++ b/themes/inhabitent-project-4/sass/_fonts.scss
@@ -3,48 +3,48 @@
 --------------------------------------------------------------*/
 @font-face {
     font-family: 'Merriweather';
-    src: url('Merriweather-Bold.eot');
-    src: url('Merriweather-Bold.eot?#iefix') format('embedded-opentype'),
-        url('Merriweather-Bold.woff2') format('woff2'),
-        url('Merriweather-Bold.woff') format('woff'),
-        url('Merriweather-Bold.ttf') format('truetype'),
-        url('Merriweather-Bold.svg#Merriweather-Bold') format('svg');
+    src: url('../../fonts/Merriweather/Merriweather-Bold.eot');
+    src: url('../../fonts/Merriweather/Merriweather-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Merriweather/Merriweather-Bold.woff2') format('woff2'),
+        url('../../fonts/Merriweather/Merriweather-Bold.woff') format('woff'),
+        url('../../fonts/Merriweather/Merriweather-Bold.ttf') format('truetype'),
+        url('../../fonts/Merriweather/Merriweather-Bold.svg#Merriweather-Bold') format('svg');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Merriweather';
-    src: url('Merriweather-LightItalic.eot');
-    src: url('Merriweather-LightItalic.eot?#iefix') format('embedded-opentype'),
-        url('Merriweather-LightItalic.woff2') format('woff2'),
-        url('Merriweather-LightItalic.woff') format('woff'),
-        url('Merriweather-LightItalic.ttf') format('truetype'),
-        url('Merriweather-LightItalic.svg#Merriweather-LightItalic') format('svg');
+    src: url('../../fonts/Merriweather/Merriweather-LightItalic.eot');
+    src: url('../../fonts/Merriweather/Merriweather-LightItalic.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Merriweather/Merriweather-LightItalic.woff2') format('woff2'),
+        url('../../fonts/Merriweather/Merriweather-LightItalic.woff') format('woff'),
+        url('../../fonts/Merriweather/Merriweather-LightItalic.ttf') format('truetype'),
+        url('../../fonts/Merriweather/Merriweather-LightItalic.svg#Merriweather-LightItalic') format('svg');
     font-weight: 300;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Merriweather';
-    src: url('Merriweather-Light.eot');
-    src: url('Merriweather-Light.eot?#iefix') format('embedded-opentype'),
-        url('Merriweather-Light.woff2') format('woff2'),
-        url('Merriweather-Light.woff') format('woff'),
-        url('Merriweather-Light.ttf') format('truetype'),
-        url('Merriweather-Light.svg#Merriweather-Light') format('svg');
+    src: url('../../fonts/Merriweather/Merriweather-Light.eot');
+    src: url('../../fonts/Merriweather/Merriweather-Light.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Merriweather/Merriweather-Light.woff2') format('woff2'),
+        url('../../fonts/Merriweather/Merriweather-Light.woff') format('woff'),
+        url('../../fonts/Merriweather/Merriweather-Light.ttf') format('truetype'),
+        url('../../fonts/Merriweather/Merriweather-Light.svg#Merriweather-Light') format('svg');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Merriweather';
-    src: url('Merriweather-BoldItalic.eot');
-    src: url('Merriweather-BoldItalic.eot?#iefix') format('embedded-opentype'),
-        url('Merriweather-BoldItalic.woff2') format('woff2'),
-        url('Merriweather-BoldItalic.woff') format('woff'),
-        url('Merriweather-BoldItalic.ttf') format('truetype'),
-        url('Merriweather-BoldItalic.svg#Merriweather-BoldItalic') format('svg');
+    src: url('../../fonts/Merriweather/Merriweather-BoldItalic.eot');
+    src: url('../../fonts/Merriweather/Merriweather-BoldItalic.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Merriweather/Merriweather-BoldItalic.woff2') format('woff2'),
+        url('../../fonts/Merriweather/Merriweather-BoldItalic.woff') format('woff'),
+        url('../../fonts/Merriweather/Merriweather-BoldItalic.ttf') format('truetype'),
+        url('../../fonts/Merriweather/Merriweather-BoldItalic.svg#Merriweather-BoldItalic') format('svg');
     font-weight: bold;
     font-style: italic;
 }
@@ -54,24 +54,24 @@
 
 @font-face {
     font-family: 'Novecento sans wide Normal';
-    src: url('Novecentosanswide-Normal.eot');
-    src: url('Novecentosanswide-Normal.eot?#iefix') format('embedded-opentype'),
-        url('Novecentosanswide-Normal.woff2') format('woff2'),
-        url('Novecentosanswide-Normal.woff') format('woff'),
-        url('Novecentosanswide-Normal.ttf') format('truetype'),
-        url('Novecentosanswide-Normal.svg#Novecentosanswide-Normal') format('svg');
+    src: url('../../fonts/Novecento/Novecentosanswide-Normal.eot');
+    src: url('../../fonts/Novecento/Novecentosanswide-Normal.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Novecento/Novecentosanswide-Normal.woff2') format('woff2'),
+        url('../../fonts/Novecento/Novecentosanswide-Normal.woff') format('woff'),
+        url('../../fonts/Novecento/Novecentosanswide-Normal.ttf') format('truetype'),
+        url('../../fonts/Novecento/Novecentosanswide-Normal.svg#Novecentosanswide-Normal') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Novecento sans wide';
-    src: url('Novecentosanswide-DemiBold.eot');
-    src: url('Novecentosanswide-DemiBold.eot?#iefix') format('embedded-opentype'),
-        url('Novecentosanswide-DemiBold.woff2') format('woff2'),
-        url('Novecentosanswide-DemiBold.woff') format('woff'),
-        url('Novecentosanswide-DemiBold.ttf') format('truetype'),
-        url('Novecentosanswide-DemiBold.svg#Novecentosanswide-DemiBold') format('svg');
+    src: url('../../fonts/Novecento/Novecentosanswide-DemiBold.eot');
+    src: url('../../fonts/Novecento/Novecentosanswide-DemiBold.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Novecento/Novecentosanswide-DemiBold.woff2') format('woff2'),
+        url('../../fonts/Novecento/Novecentosanswide-DemiBold.woff') format('woff'),
+        url('../../fonts/Novecento/Novecentosanswide-DemiBold.ttf') format('truetype'),
+        url('../../fonts/Novecento/Novecentosanswide-DemiBold.svg#Novecentosanswide-DemiBold') format('svg');
     font-weight: 600;
     font-style: normal;
 }
