--- a/themes/inhabitent-project-4/sass/about.scss
+++ b/themes/inhabitent-project-4/sass/about.scss
@@ -2,8 +2,8 @@
 .about-hero-image > img {
     width: 100%;
     height: auto;
-    top: 0;
-    position: absolute;
+    // top: 0;
+    // position: absolute;
     z-index: -100;
     background: black;
 }
@@ -26,8 +26,8 @@
 }
 
 .the-content {
-    position: relative;
-    top: 900px;
+    // position: relative;
+    // top: 900px;
     display: flex;
     margin-bottom: 200px;
     flex-direction: column;
